--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -314,7 +314,10 @@
     <div class="max-w-4xl mx-auto px-4 py-4 text-center">
       <div class="inline-flex items-center justify-center gap-2 text-xs text-gray-500">
         <img src="{{ url_for('static', filename='img/favicon-16x16.png') }}" alt="Altera mark" class="w-4 h-4" />
-        <span>Powered by AlteraSF</span>
+        <a href="https://alterasf.com/" target="_blank" rel="noopener noreferrer" 
+           class="hover:text-slate-700 hover:underline cursor-pointer transition-colors duration-200">
+          Powered by AlteraSF
+        </a>
       </div>
     </div>
     <div class="max-w-4xl mx-auto px-4 pb-6 text-center text-xs text-gray-500">
